--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.19",
+    "axios": "^1.4.0",
+    "framer-motion": "^12.23.26",
+    "lucide-react": "^0.263.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0",
-    "@tanstack/react-query": "^4.29.19",
-    "zustand": "^4.3.8",
     "react-hook-form": "^7.45.1",
-    "zod": "^3.21.4",
-    "lucide-react": "^0.263.0",
+    "react-router-dom": "^6.14.0",
     "recharts": "^2.7.2",
     "tailwindcss": "^3.3.3",
-    "axios": "^1.4.0"
+    "zod": "^3.21.4",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
