--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,18 +12,27 @@
   "dependencies": {
     "@tanstack/react-query": "^4.29.19",
     "axios": "^1.4.0",
+    "canvas-confetti": "^1.9.3",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "framer-motion": "^12.23.26",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.263.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-force-graph": "^1.44.3",
     "react-hook-form": "^7.45.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.14.0",
     "recharts": "^2.7.2",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.3.3",
     "zod": "^3.21.4",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
+    "@types/leaflet": "^1.9.12",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
