--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
     "@tanstack/react-query": "^4.29.19",
     "axios": "^1.4.0",
     "canvas-confetti": "^1.9.3",
