--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "electron": "^39.2.7",
     "framer-motion": "^12.23.26",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.263.0",
@@ -47,7 +48,7 @@
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
+    "vite": "^7.3.0",
     "vite-plugin-singlefile": "^2.3.0"
   }
 }
