--- a/package.json
+++ b/package.json
@@ -1,53 +1,48 @@
 {
-  "name": "enterprise-management-system",
-  "version": "1.0.0",
-  "description": "企业管理系统 - AI技术生态合作伙伴管理平台",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "name": "nexus-workstation",
+  "version": "3.5.0",
+  "description": "联图/Nexus - 西南AI产业生态智研决策平台",
+  "main": "main.js",
+  "author": "Lantú Intelligence",
+  "build": {
+    "appId": "com.nexus.workstation",
+    "productName": "联图Nexus",
+    "mac": {
+      "category": "public.app-category.business",
+      "target": [
+        {
+          "target": "dmg",
+          "arch": "arm64"
+        }
+      ],
+      "icon": "assets/icon.png"
+    },
+    "directories": {
+      "output": "dist_electron"
+    },
+    "files": [
+      "main.js",
+      "frontend/dist/**/*",
+      "backend/dist/**/*",
+      "backend/node_modules/**/*",
+      "backend/prisma/nexus_desktop.db"
+    ],
+    "asar": true
   },
-  "keywords": [
-    "enterprise",
-    "management",
-    "ai",
-    "partnership",
-    "baidu",
-    "paddlepaddle",
-    "wenxin",
-    "crm"
-  ],
-  "author": "Enterprise AI Team",
-  "license": "MIT",
-  "dependencies": {
-    "bcryptjs": "^3.0.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.22.1",
-    "express-rate-limit": "^8.2.1",
-    "express-validator": "^7.3.1",
-    "helmet": "^8.1.0",
-    "jsonwebtoken": "^9.0.3",
-    "pg": "^8.16.3"
+  "scripts": {
+    "start": "electron .",
+    "build:frontend": "cd frontend && npm install && npm run build",
+    "build:backend": "cd backend && npm install && npm run build",
+    "prep:sqlite": "node scripts/switch-db.js sqlite && cd backend && npx prisma db push --accept-data-loss && npx ts-node master_seed.ts",
+    "build:dmg": "npm run build:frontend && npm run build:backend && npm run prep:sqlite && electron-builder build --mac --arm64"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "electron": "^34.3.0",
+    "electron-builder": "^25.1.8",
+    "wait-on": "^8.0.2"
   },
-  "engines": {
-    "node": ">=14.0.0"
-  },
-  "directories": {
-    "doc": "docs",
-    "test": "tests"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/view2future/enterprise_ai_workstation.git"
-  },
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/view2future/enterprise_ai_workstation/issues"
-  },
-  "homepage": "https://github.com/view2future/enterprise_ai_workstation#readme"
+  "dependencies": {
+    "concurrently": "^9.1.2",
+    "cross-env": "^7.0.3"
+  }
 }
