--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
           "target": "dmg",
           "arch": "arm64"
         }
-      ],
-      "icon": "assets/icon.png"
+      ]
     },
     "directories": {
       "output": "dist_electron"
@@ -27,7 +26,11 @@
       "backend/node_modules/**/*",
       "backend/prisma/nexus_desktop.db"
     ],
-    "asar": true
+    "asar": true,
+    "asarUnpack": [
+      "backend/dist/**/*",
+      "backend/node_modules/**/*"
+    ]
   },
   "scripts": {
     "start": "electron .",
@@ -38,11 +41,11 @@
   },
   "devDependencies": {
     "electron": "^34.3.0",
-    "electron-builder": "^25.1.8",
-    "wait-on": "^8.0.2"
+    "electron-builder": "^25.1.8"
   },
   "dependencies": {
     "concurrently": "^9.1.2",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "wait-on": "^8.0.2"
   }
 }
