stable version, with both demo and prod db and accout, able to build dmg file for macbook

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,14 @@ build/
 release/
 out/
 dist_electron/
+android/
+*.apk
+*.aar
+*.jks
+*.keystore
+.gradle/
+build/
+captacitor.config.ts.old
 *.dmg
 *.pkg
 *.zip
