--- a/backend/package.json
+++ b/backend/package.json
@@ -29,13 +29,16 @@
     "prisma:migrate:deploy": "npx prisma migrate deploy"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.0.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.2",
     "@prisma/client": "^5.0.0",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "bullmq": "^4.0.0",
     "class-transformer": "^0.5.1",
@@ -43,6 +46,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "excel4node": "^1.8.0",
+    "express": "^4.22.1",
     "express-rate-limit": "^6.10.0",
     "helmet": "^7.0.0",
     "html-pdf": "^3.0.1",
