--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "bullmq": "^4.0.0",
+    "cheerio": "^1.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
