--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexus-workstation",
-  "version": "0.1.0",
+  "version": "5.0.20251225",
   "description": "联图/Nexus - 西南AI产业生态智研决策平台",
   "main": "main.js",
   "author": "Lantú Intelligence",
@@ -22,16 +22,11 @@
     },
     "files": [
       "main.js",
-      "frontend/dist/**/*"
+      "preload.js",
+      "frontend/dist/**/*",
+      "assets/**/*"
     ],
     "extraResources": [
-      {
-        "from": "assets",
-        "to": "assets",
-        "filter": [
-          "**/*"
-        ]
-      },
       {
         "from": "backend/dist",
         "to": "backend/dist",
